--- a/galaxy/lazarus/.artixlinux/pkgbase.yaml
+++ b/galaxy/lazarus/.artixlinux/pkgbase.yaml
@@ -1,14 +1,4 @@
 ---
-pkgbase:
-  name: lazarus
-  version: 4.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - lazarus
-    - lazarus-gtk3
-    - lazarus-qt5
-    - lazarus-qt6
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -21,41 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 4.0-1
+    version: 4.0-2
     packages:
-      - lazarus-4.0-1-x86_64.pkg.tar.zst
-      - lazarus-gtk3-4.0-1-x86_64.pkg.tar.zst
-      - lazarus-qt5-4.0-1-x86_64.pkg.tar.zst
-      - lazarus-qt6-4.0-1-x86_64.pkg.tar.zst
+      - lazarus-4.0-2-x86_64.pkg.tar.zst
+      - lazarus-gtk3-4.0-2-x86_64.pkg.tar.zst
+      - lazarus-qt5-4.0-2-x86_64.pkg.tar.zst
+      - lazarus-qt6-4.0-2-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
