--- a/galaxy/octave/.artixlinux/pkgbase.yaml
+++ b/galaxy/octave/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: octave
-  version: 9.4.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - octave
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 9.4.0-1
+    version: 10.2.0-1
     packages:
-      - octave-9.4.0-1-x86_64.pkg.tar.zst
+      - octave-10.2.0-1-x86_64.pkg.tar.zst
+    debug: []
