--- a/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
+++ b/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,13 +49,12 @@ repos:
     packages: []
     debug: []
   galaxy-gremlins:
-    version: 5.15.3-2
-    packages:
-      - telegram-desktop-5.15.3-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   galaxy:
-    version: 5.15.4-2
+    version: 5.15.4-2.1
     packages:
-      - telegram-desktop-5.15.4-2-x86_64.pkg.tar.zst
+      - telegram-desktop-5.15.4-2.1-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
