--- a/world/osinfo-db/.artixlinux/pkgbase.yaml
+++ b/world/osinfo-db/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: osinfo-db
-  version: 20250124-1
-  arch:
-    - any
-  pkgname:
-    - osinfo-db
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 20250124-1
+    version: 20250606-1
     packages:
-      - osinfo-db-20250124-1-any.pkg.tar.zst
+      - osinfo-db-20250606-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
