--- a/world/python-auditwheel/.artixlinux/pkgbase.yaml
+++ b/world/python-auditwheel/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: python-auditwheel
-  version: 6.1.0-1
-  arch:
-    - any
-  pkgname:
-    - python-auditwheel
 actions:
   addRepo: world
   removeRepo: null
@@ -14,42 +7,54 @@ actions:
   triggersRebuild: false
   triggersRepoAdd: true
   triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.1.0-1
+    version: 6.4.0-1
     packages:
-      - python-auditwheel-6.1.0-1-any.pkg.tar.zst
+      - python-auditwheel-6.4.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
