--- a/world/python-tox-current-env/.artixlinux/pkgbase.yaml
+++ b/world/python-tox-current-env/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: python-tox-current-env
-  version: 0.0.14-1
-  arch:
-    - any
-  pkgname:
-    - python-tox-current-env
 actions:
   addRepo: world
   removeRepo: null
@@ -13,43 +6,55 @@ actions:
   triggersRebuild: false
   triggersRepoAdd: true
   triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.0.14-1
+    version: 0.0.16-1
     packages:
-      - python-tox-current-env-0.0.14-1-any.pkg.tar.zst
+      - python-tox-current-env-0.0.16-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
