--- a/world/mesa-demos/.artixlinux/srcinfo.yaml
+++ b/world/mesa-demos/.artixlinux/srcinfo.yaml
@@ -1,9 +1,9 @@
 ---
-version: 9.0.0-6.1
+version: 9.0.0-7
 pkgbase:
   name: mesa-demos
   pkgver: 9.0.0
-  pkgrel: 6.1
+  pkgrel: 7
   url: https://www.mesa3d.org/
   arch:
     - x86_64
@@ -24,7 +24,7 @@ pkgbase:
     - https://mesa.freedesktop.org/archive/demos/mesa-demos-9.0.0.tar.xz
     - https://mesa.freedesktop.org/archive/demos/mesa-demos-9.0.0.tar.xz.sig
     - mesa-demos-system-data.patch
-    - LICENSE
+    - license-from-upstream
   validpgpkeys:
     - FF4CF638C624C3CF21ED2CF227EF763A2AA39F96
   sha512sums:
