--- a/world/libaec/PKGBUILD
+++ b/world/libaec/PKGBUILD
@@ -1,22 +1,17 @@
-# Maintainer: Bruno Pagani <archange@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Bruno Pagani <archange@archlinux.org>
 
 pkgname=libaec
-pkgver=1.1.3
-pkgrel=2
+pkgver=1.1.4
+pkgrel=1
 pkgdesc="Adaptive Entropy Coding library"
 arch=(x86_64)
 url="https://gitlab.dkrz.de/k202009/libaec"
 license=(custom)
 depends=(glibc)
 makedepends=(cmake)
-source=(${url}/-/archive/v${pkgver}/${pkgname}-v${pkgver}.tar.bz2
-        fix-cmake-install-dir.patch)
-sha256sums=('46216f9d2f2d3ffea4c61c9198fe0236f7f316d702f49065c811447186d18222'
-            'dbe438d44aa4b8c5991ad70e9e9b170a02466e003c134f123f6bc82ae1be22ea')
-
-prepare() {
-  patch -d $pkgname-v$pkgver -p1 < fix-cmake-install-dir.patch # Fix cmake install dir
-}
+source=(${url}/-/archive/v${pkgver}/${pkgname}-v${pkgver}.tar.bz2)
+sha256sums=('cf869c166656a83857adf62a092311a0069855c6ced3446e3f090a6d52279f65')
 
 build() {
   cmake -B build -S ${pkgname}-v${pkgver} \
@@ -28,5 +23,4 @@ build() {
 package() {
   make -C build DESTDIR="${pkgdir}" install
   install -Dm644 ${pkgname}-v${pkgver}/LICENSE.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}/
-  mv "${pkgdir}"/usr/{,lib}/cmake
 }
