--- a/world/z3/.artixlinux/pkgbase.yaml
+++ b/world/z3/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: z3
-  version: 4.14.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - z3
-    - python-z3-solver
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.14.1-1
+    version: 4.15.1-1
     packages:
-      - z3-4.14.1-1-x86_64.pkg.tar.zst
-      - python-z3-solver-4.14.1-1-x86_64.pkg.tar.zst
+      - z3-4.15.1-1-x86_64.pkg.tar.zst
+      - python-z3-solver-4.15.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
