--- a/world/gvfs/.artixlinux/pkgbase.yaml
+++ b/world/gvfs/.artixlinux/pkgbase.yaml
@@ -1,75 +1,70 @@
 ---
-pkgbase:
-  name: gvfs
-  version: 1.57.2-3
-  arch:
-    - x86_64
-  pkgname:
-    - gvfs
-    - gvfs-afc
-    - gvfs-dnssd
-    - gvfs-goa
-    - gvfs-google
-    - gvfs-gphoto2
-    - gvfs-mtp
-    - gvfs-nfs
-    - gvfs-onedrive
-    - gvfs-smb
-    - gvfs-wsdd
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.57.2-3
+    version: 1.57.2-4
     packages:
-      - gvfs-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-afc-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-dnssd-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-goa-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-google-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-gphoto2-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-mtp-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-nfs-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-onedrive-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-smb-1.57.2-3-x86_64.pkg.tar.zst
-      - gvfs-wsdd-1.57.2-3-x86_64.pkg.tar.zst
+      - gvfs-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-afc-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-dnssd-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-goa-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-google-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-gphoto2-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-mtp-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-nfs-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-onedrive-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-smb-1.57.2-4-x86_64.pkg.tar.zst
+      - gvfs-wsdd-1.57.2-4-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
