--- a/world/vlc/.artixlinux/pkgbase.yaml
+++ b/world/vlc/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 3.0.21-22
+    version: 3.0.21-23
     packages:
-      - vlc-3.0.21-22-x86_64.pkg.tar.zst
-      - libvlc-3.0.21-22-x86_64.pkg.tar.zst
+      - vlc-3.0.21-23-x86_64.pkg.tar.zst
+      - libvlc-3.0.21-23-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
