--- a/galaxy/yazi/.artixlinux/pkgbase.yaml
+++ b/galaxy/yazi/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: galaxy
-pkgbase:
-  name: yazi
-  version: 25.2.7-1
-  arch:
-    - x86_64
-  pkgname:
-    - yazi
 actions:
-  addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  addRepo: null
+  removeRepo: galaxy
+  triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoAdd: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: null
-    packages: []
+    version: 25.5.31-1
+    packages:
+      - yazi-25.5.31-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 25.2.7-1
-    packages:
-      - yazi-25.2.7-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
