--- a/galaxy/yazi/PKGBUILD
+++ b/galaxy/yazi/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Evine Deng <evinedeng@hotmail.com>
 
 pkgname=yazi
-pkgver=25.2.7
+pkgver=25.5.31
 pkgrel=1
 pkgdesc="Blazing fast terminal file manager written in Rust, based on async I/O"
 url="https://github.com/sxyazi/yazi"
@@ -25,7 +25,7 @@ optdepends=(
 )
 makedepends=('cargo' 'imagemagick')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/sxyazi/$pkgname/archive/v$pkgver.tar.gz")
-sha256sums=('3d31e3d94387a92c072181e3d55dc15e23a2f81c1a2668d35448d7e5c70887ae')
+sha256sums=('4d005e7c3f32b5574d51ab105597f3da3a4be2f7b5cd1bcb284143ad38253ed4')
 options=('!lto')
 
 prepare() {
@@ -55,7 +55,7 @@ package() {
   local r
   for r in 16 24 32 48 64 128 256; do
     install -dm755 "$pkgdir/usr/share/icons/hicolor/${r}x${r}/apps"
-    convert assets/logo.png -resize "${r}x${r}" "$pkgdir/usr/share/icons/hicolor/${r}x${r}/apps/yazi.png"
+    magick assets/logo.png -resize "${r}x${r}" "$pkgdir/usr/share/icons/hicolor/${r}x${r}/apps/yazi.png"
   done
 
   cd "$pkgname-boot/completions"
